--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": " src/server.ts",
     "type": "module",
     "scripts": {
-        "start": "tsc && node .\\build/server.js"
+        "start": "tsc && node ./build/server.js"
     },
     "author": "",
     "license": "ISC",
